feat: login form with shadcn components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
   "editor.dropIntoEditor.preferences": [],
   "editor.cursorBlinking": "expand",
   "terminal.integrated.fontSize": 12,
+  "editor.wordWrap": "on",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   }
