feat: implement user login logic

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@
 # use the production url when deploying to production
 NODE_ENV=development
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# this is the url of the backend server
+NEXT_PUBLIC_API_URL=http://localhost:3001/v1
