--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@hookform/resolvers": "^5.0.1",
     "@next/bundle-analyzer": "^15.2.4",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.12.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
