--- a/package.json
+++ b/package.json
@@ -21,13 +21,6 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@next/bundle-analyzer": "^15.2.4",
-    "@radix-ui/react-aspect-ratio": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.12.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -36,6 +29,7 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
